Refactor Forgot Password Flow & Standardize Frontend Headers

--- a/src/Frontend/cart-backend.html
+++ b/src/Frontend/cart-backend.html
@@ -21,7 +21,7 @@
     <!-- Header -->
     <header class="bg-[#AD3029] text-white shadow-sm sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex items-center justify-between py-4 gap-8">
+            <div class="flex items-center justify-between h-20 gap-8">
                 <div class="flex items-center gap-4 min-w-fit">
                     <a href="index.html" class="flex items-center gap-2 text-white hover:opacity-90">
                         <i class="fas fa-shopping-bag text-3xl bounce-goshop"></i>
@@ -45,6 +45,9 @@
                         <img id="userAvatar" src="" alt="User" class="w-8 h-8 rounded-full border-2 border-white/50">
                         <span id="userName" class="font-medium text-sm hidden lg:block">Loading...</span>
                     </div>
+                    <a href="index.html" class="text-white hover:text-orange-200 transition" title="Back to Home">
+                        <i class="fas fa-home text-xl"></i>
+                    </a>
                 </div>
             </div>
         </div>
