--- a/src/Frontend/checkout-backend.html
+++ b/src/Frontend/checkout-backend.html
@@ -23,11 +23,15 @@
     <!-- Header -->
     <header class="header-gradient shadow-md">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex items-center py-4">
-                <i class="fas fa-shopping-bag text-3xl text-white mr-3"></i>
-                <span class="text-2xl font-bold text-white">GoShop</span>
-                <span class="mx-4 text-white">|</span>
-                <span class="text-xl text-white">Checkout (Backend)</span>
+            <div class="flex items-center justify-between h-20">
+                <a href="index.html" class="flex items-center gap-2 text-white hover:opacity-90 transition">
+                    <i class="fas fa-shopping-bag text-3xl bounce-goshop"></i>
+                    <span class="text-2xl font-bold">GoShop | Checkout</span>
+                </a>
+
+                <a href="index.html" class="text-white hover:text-orange-200 transition p-2" title="Back to Home">
+                    <i class="fas fa-home text-xl"></i>
+                </a>
             </div>
         </div>
     </header>
