--- a/src/Frontend/freeship.html
+++ b/src/Frontend/freeship.html
@@ -74,7 +74,7 @@
     <!-- Header -->
     <header class="header-gradient shadow-md sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between items-center py-4">
+            <div class="flex justify-between items-center h-20">
                 <div class="flex items-center space-x-3">
                     <a href="index.html" class="text-white hover:text-orange-200">
                         <i class="fas fa-arrow-left text-xl"></i>
