--- a/src/Frontend/index.html
+++ b/src/Frontend/index.html
@@ -51,7 +51,7 @@
                 <!-- 2. Search Section (Centered & Wide) -->
                 <div class="flex-1 max-w-2xl relative">
                     <div class="relative group"><input id="globalSearchInput" type="text"
-                            data-i18n="header.search_placeholder" placeholder="Search products..."
+                            placeholder="Search products..."
                             class="w-full h-10 pl-4 pr-12 rounded-sm text-black focus:outline-none shadow-inner transition border-2 border-transparent focus:border-red-300"><button
                             id="globalSearchButton"
                             class="absolute right-0 top-0 h-10 w-12 bg-[#DC2626] hover:bg-[#B91C1C] flex items-center justify-center rounded-r-sm transition"><i
@@ -59,11 +59,7 @@
                 </div>
                 <!-- 3. Actions Section (Right) -->
                 <div class="flex items-center gap-6">
-                    <!-- Language Toggle --><button id="lang-toggle"
-                        class="text-sm font-medium hover:opacity-80 flex items-center gap-1 transition"><img
-                            src="https://flagcdn.com/24x18/gb.png" alt="English"
-                            class="inline-block mr-1.5 w-5 h-auto object-cover border border-gray-200"> <span
-                            class="uppercase">English</span></button>
+                    <!-- Language Toggle Removed -->
                     <!-- Notifications -->
                     <div class="relative group h-full flex items-center"><button
                             class="hover:opacity-80 transition relative p-2"><i class="far fa-bell text-xl"></i>
@@ -138,27 +134,27 @@
                     <!-- Slide 1 (Master Height - Fixed Ratio) -->
                     <div class="w-full h-full flex-shrink-0 relative">
                         <img src="assets/banner01.png" class="absolute inset-0 w-full h-full object-cover"
-                            alt="Mã Freeship 50k Banner">
+                            alt="Freeship 50k Banner">
                     </div>
                     <!-- Slide 2 (Follows Slide 1 Height - Cropped if needed) -->
                     <div class="w-full flex-shrink-0 relative">
                         <img src="assets/banner02.png" class="absolute inset-0 w-full h-full object-cover"
-                            alt="Thứ 5 Hàng Tuần Banner">
+                            alt="Weekly Thursday Banner">
                     </div>
                     <!-- Slide 3 (Follows Slide 1 Height - Cropped if needed) -->
                     <div class="w-full flex-shrink-0 relative">
                         <img src="assets/banner03.png" class="absolute inset-0 w-full h-full object-cover"
-                            alt="Thương Hiệu Khao Banner">
+                            alt="Brand Deals Banner">
                     </div>
                     <!-- Slide 4 (Follows Slide 1 Height - Cropped if needed) -->
                     <div class="w-full flex-shrink-0 relative">
                         <img src="assets/banner04.png" class="absolute inset-0 w-full h-full object-cover"
-                            alt="Khuyến Mãi Banner 1">
+                            alt="Promotion Banner 1">
                     </div>
                     <!-- Slide 5 (Follows Slide 1 Height - Cropped if needed) -->
                     <div class="w-full flex-shrink-0 relative">
                         <img src="assets/banner05.png" class="absolute inset-0 w-full h-full object-cover"
-                            alt="Ngày Hội Flash Sale Banner">
+                            alt="Flash Sale Day Banner">
                     </div>
                     <!-- Slide 6 (Follows Slide 1 Height - Cropped if needed) -->
                     <div class="w-full flex-shrink-0 relative">
@@ -289,7 +285,7 @@
         <div class="max-w-7xl mx-auto px-4">
             <div class="flex items-center justify-between mb-6">
                 <div class="flex items-center space-x-4">
-                    <h2 class="text-2xl font-bold text-red-600" data-i18n="home.flash_sale">FLASH
+                    <h2 class="text-2xl font-bold text-red-600">FLASH
                         SALE</h2>
                     <div class="flex items-center space-x-2" id="flashSaleCountdown"><span
                             class="text-sm font-bold text-gray-500 mr-1">Còn:</span>
@@ -300,21 +296,21 @@
                         <div id="flashSaleSeconds" class="bg-blue-600 text-white px-2 py-1 rounded text-sm font-bold">00
                         </div>
                     </div>
-                </div><a href="flash-sale.html" class="text-red-500 font-semibold hover:text-red-600"
-                    data-i18n="home.view_all">See All →</a>
-            </div>
-            <!-- Categories & Flash Sale Products Grid -->
-            <div id="flashSaleList" class="grid grid-cols-2 md:grid-cols-6 gap-4 mb-6">
-                <!-- Products will be loaded here -->
-                <div class="col-span-full text-center text-gray-400 py-8">Loading Flash
-                    Sale...</div>
-            </div>
+                </div>
+            </div><a href="flash-sale.html" class="text-red-500 font-semibold hover:text-red-600">See All →</a>
+        </div>
+        <!-- Categories & Flash Sale Products Grid -->
+        <div id="flashSaleList" class="grid grid-cols-2 md:grid-cols-6 gap-4 mb-6">
+            <!-- Products will be loaded here -->
+            <div class="col-span-full text-center text-gray-400 py-8">Loading Flash
+                Sale...</div>
+        </div>
         </div>
     </section>
     <!-- Categories Section -->
     <section class="bg-white py-6 mb-4">
         <div class="max-w-7xl mx-auto px-4">
-            <h2 class="text-xl font-bold text-gray-800 mb-4" data-i18n="home.categories">
+            <h2 class="text-xl font-bold text-gray-800 mb-4">
                 CATEGORIES</h2>
             <div id="categoryList" class="grid grid-cols-3 md:grid-cols-10 gap-4 text-center">
                 <!-- Categories will be loaded here -->
@@ -328,9 +324,8 @@
         <!-- Daily Discover -->
         <section id="products" class="mb-12">
             <div class="flex justify-between items-center mb-6">
-                <h2 class="text-2xl font-bold text-gray-800" data-i18n="home.daily_discover">DAILY DISCOVER</h2><a
-                    href="daily-discover.html" class="text-red-500 font-semibold hover:text-red-600"
-                    data-i18n="home.view_all">See More</a>
+                <h2 class="text-2xl font-bold text-gray-800">DAILY DISCOVER</h2><a href="daily-discover.html"
+                    class="text-red-500 font-semibold hover:text-red-600">See More</a>
             </div>
             <div id="dailyDiscoverList" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-4">
                 <!-- Products will be loaded here -->
@@ -1110,9 +1105,7 @@
         });
     </script>
     <script src="js/notification.js"></script>
-    <!-- Language Scripts -->
-    <script src="js/translations.js"></script>
-    <script src="js/i18n.js"></script>
+
     <!--    <!-- Scripts -->
     <script>
         const slidesContainer = document.getElementById('carouselSlides');
