--- a/src/Frontend/seller-register.html
+++ b/src/Frontend/seller-register.html
@@ -132,6 +132,9 @@
                     <div id="userNav" class="hidden flex items-center gap-2 cursor-pointer relative group h-full">
                         <img src="" class="w-8 h-8 rounded-full border-2 border-white/50" id="userAvatar">
                         <span id="userName" class="font-semibold max-w-[100px] truncate hidden md:block">User</span>
+                        <a href="index.html" class="text-white hover:text-red-200 transition ml-1" title="Back to Home">
+                            <i class="fas fa-home"></i>
+                        </a>
 
                         <!-- Dropdown -->
                         <div class="absolute right-0 top-full pt-2 w-48 hidden group-hover:block z-50 animate-fade-in">
