--- a/src/Frontend/daily-discover.html
+++ b/src/Frontend/daily-discover.html
@@ -12,40 +12,76 @@
 
 <body class="bg-gray-100">
     <!-- Header -->
-    <header class="header-gradient shadow-md sticky top-0 z-50">
+    <header class="bg-[#AD3029] text-white shadow-md sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between items-center py-4">
-                <div class="flex items-center space-x-3">
-                    <i class="fas fa-shopping-bag text-3xl text-white"></i>
-                    <a href="index.html" class="text-2xl font-bold text-white">GoShop</a>
+            <div class="flex items-center justify-between h-20 gap-8">
+                <!-- 1. Logo Section --><a href="index.html"
+                    class="flex items-center gap-2 group flex-shrink-0 hover:opacity-90 transition"><i
+                        class="fas fa-shopping-bag text-3xl text-white bounce-goshop"></i><span
+                        class="text-2xl font-bold tracking-tight">GoShop</span></a>
+                <!-- 2. Search Section (Centered & Wide) -->
+                <div class="flex-1 max-w-2xl relative">
+                    <div class="relative group"><input id="globalSearchInput" type="text"
+                            placeholder="Search products..."
+                            class="w-full h-10 pl-4 pr-12 rounded-sm text-black focus:outline-none shadow-inner transition border-2 border-transparent focus:border-red-300"><button
+                            id="globalSearchButton"
+                            class="absolute right-0 top-0 h-10 w-12 bg-[#DC2626] hover:bg-[#B91C1C] flex items-center justify-center rounded-r-sm transition"><i
+                                class="fas fa-search text-white"></i></button></div>
                 </div>
-                <div class="flex-1 max-w-2xl mx-8">
-                    <div class="relative">
-                        <input type="text" placeholder="Search for products..."
-                            class="w-full p-3 pl-12 pr-16 rounded-sm">
-                        <i
-                            class="fas fa-search absolute left-5 top-1/2 transform -translate-y-1/2 text-gray-400 text-xl"></i>
-                        <button
-                            class="absolute right-3 top-1/2 transform -translate-y-1/2 bg-orange-600 hover:bg-orange-700 text-white px-6 py-2 rounded-sm font-semibold">Search</button>
+                <!-- 3. Actions Section (Right) -->
+                <div class="flex items-center gap-6">
+                    <!-- Notifications -->
+                    <div class="relative group h-full flex items-center"><button
+                            class="hover:opacity-80 transition relative p-2"><i class="far fa-bell text-xl"></i>
+                        </button>
+                        <!-- Dropdown -->
+                        <div class="hidden group-hover:block absolute top-full right-0 pt-2 w-72 z-50">
+                            <div
+                                class="bg-white text-black shadow-xl rounded-lg border border-gray-200 overflow-hidden">
+                                <div class="p-3 border-b bg-gray-50 flex justify-between items-center">
+                                    <span class="text-sm font-semibold text-gray-700">Notifications</span><button
+                                        class="text-xs text-blue-600 hover:underline">Mark
+                                        all read</button>
+                                </div>
+                                <div class="p-8 text-center text-sm text-gray-500 flex flex-col items-center">
+                                    <i class="far fa-bell-slash text-2xl mb-2 text-gray-300"></i>No
+                                    new notifications
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="flex items-center space-x-4">
-                    <button onclick="window.location.href='cart-backend.html'"
-                        class="relative p-2 hover:bg-orange-700 rounded-full transition mr-2">
-                        <i class="fas fa-shopping-cart text-xl text-white"></i>
-                        <span id="cartBadge"
-                            class="absolute -top-1 -right-1 bg-white text-orange-600 text-xs font-bold rounded-full w-5 h-5 flex items-center justify-center"
-                            style="display: none;">0</span>
-                    </button>
-                    <div id="guestNav" class="flex items-center space-x-4">
-                        <a href="login.html" class="text-white font-semibold hover:text-orange-200">Sign in</a>
-                        <a href="register.html" class="bg-white text-orange-600 px-4 py-2 rounded font-semibold">Sign
-                            up</a>
-                    </div>
-                    <div id="userNav" class="hidden flex items-center space-x-3 text-white">
-                        <div class="flex items-center space-x-2">
-                            <img id="userAvatar" src="" alt="User" class="w-6 h-6 rounded-full border border-white">
-                            <span id="userName" class="font-semibold truncate max-w-[150px]">User</span>
+                    <!-- Cart --><a href="cart-backend.html" class="relative hover:opacity-80 transition p-1"><i
+                            class="fas fa-shopping-cart text-xl"></i><span id="cartBadge"
+                            class="absolute -top-1 -right-1 bg-white text-[#AD3029] text-[10px] font-bold px-1.5 py-0.5 rounded-full shadow-sm hidden">0</span></a>
+                    <div class="h-6 w-px bg-white/30"></div>
+                    <!-- Auth Actions -->
+                    <!-- Guest -->
+                    <div id="guestNav" class="flex items-center gap-3 font-medium text-sm"><a href="register.html"
+                            class="hover:text-gray-200 transition">Sign Up</a><a href="login.html"
+                            class="hover:text-gray-200 transition">Sign in</a></div>
+                    <!-- User -->
+                    <div id="userNav" class="hidden flex items-center gap-2 cursor-pointer relative group h-full">
+                        <img src="https://ui-avatars.com/api/?name=User&background=fecaca&color=AD3029"
+                            class="w-8 h-8 rounded-full border-2 border-white/50" id="userAvatar"><span id="userName"
+                            class="font-semibold max-w-[100px] truncate hidden md:block">User</span>
+                        <!-- Dropdown -->
+                        <div class="absolute right-0 top-full pt-2 w-48 hidden group-hover:block z-50 animate-fade-in">
+                            <div class="bg-white text-black rounded-md shadow-lg py-1 border border-gray-100">
+                                <a href="profile.html" class="block px-4 py-2 text-sm hover:bg-gray-100 transition"><i
+                                        class="far fa-user mr-2 text-gray-400"></i>My
+                                    Profile</a><a href="my-orders-backend.html"
+                                    class="block px-4 py-2 text-sm hover:bg-gray-100 transition"><i
+                                        class="fas fa-box mr-2 text-gray-400"></i>My
+                                    Orders</a>
+                                <a href="admin-dashboard.html" id="adminPanelLink"
+                                    class="block px-4 py-2 text-sm hover:bg-gray-100 transition font-bold text-red-600 hidden"><i
+                                        class="fas fa-user-shield mr-2"></i>Admin
+                                    Panel</a>
+                                <div class="border-t border-gray-100 my-1">
+                                </div><button onclick="logout()"
+                                    class="block w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-red-50 transition"><i
+                                        class="fas fa-sign-out-alt mr-2"></i>Logout</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -92,20 +128,76 @@
     <script>
         const API_BASE_URL = 'http://localhost:8080/api';
 
-        // Check Auth
         document.addEventListener('DOMContentLoaded', () => {
-            checkLogin();
+            updateNavbar();
+            updateCartBadge();
             loadDailyProducts();
         });
 
-        function checkLogin() {
-            const user = JSON.parse(localStorage.getItem('user'));
-            if (user) {
-                document.getElementById('guestNav').classList.add('hidden');
-                document.getElementById('userNav').classList.remove('hidden');
-                document.getElementById('userName').textContent = user.fullName || user.username;
-                document.getElementById('userAvatar').src = user.avatarUrl || 'https://via.placeholder.com/32';
+        async function updateNavbar() {
+            const token = localStorage.getItem('accessToken');
+            const user = JSON.parse(localStorage.getItem('user') || '{}');
+            const userName = user.fullName || localStorage.getItem('userName') || 'User';
+            const userRole = user.role || localStorage.getItem('userRole') || 'CUSTOMER';
+
+            const guestNav = document.getElementById('guestNav');
+            const userNav = document.getElementById('userNav');
+            const userNameEl = document.getElementById('userName');
+            const userAvatar = document.getElementById('userAvatar');
+            const adminPanelLink = document.getElementById('adminPanelLink');
+            const sellerChannelLink = document.getElementById('sellerChannelLink');
+
+            if (token) {
+                if (guestNav) guestNav.classList.add('hidden');
+                if (userNav) {
+                    userNav.classList.remove('hidden');
+                    userNav.style.display = 'flex';
+                }
+                if (userNameEl) userNameEl.textContent = userName;
+                if (userAvatar) {
+                    userAvatar.src = `https://ui-avatars.com/api/?name=${encodeURIComponent(userName)}&background=fecaca&color=AD3029`;
+                }
+                if (userRole === 'ADMIN' && adminPanelLink) adminPanelLink.classList.remove('hidden');
+            } else {
+                if (guestNav) guestNav.classList.remove('hidden');
+                if (userNav) {
+                    userNav.classList.add('hidden');
+                    userNav.style.display = 'none';
+                }
             }
+        }
+
+        async function updateCartBadge() {
+            const token = localStorage.getItem('accessToken');
+            const badge = document.getElementById('cartBadge');
+            if (!token || !badge) {
+                if (badge) badge.style.display = 'none';
+                return;
+            }
+            try {
+                const res = await fetch(`${API_BASE_URL}/cart`, { headers: { 'Authorization': `Bearer ${token}` } });
+                if (res.ok) {
+                    const data = await res.json();
+                    const total = data.items ? data.items.reduce((s, i) => s + i.quantity, 0) : 0;
+                    badge.textContent = total;
+                    if (total > 0) {
+                        badge.style.display = 'flex';
+                        badge.classList.remove('hidden');
+                    } else {
+                        badge.style.display = 'none';
+                    }
+                }
+            } catch (e) {
+                console.error(e);
+            }
+        }
+
+        function logout() {
+            localStorage.removeItem('accessToken');
+            localStorage.removeItem('user');
+            localStorage.removeItem('userName');
+            localStorage.removeItem('cart');
+            window.location.href = 'index.html';
         }
 
         async function loadDailyProducts() {
@@ -121,8 +213,6 @@
                 if (products.content) products = products.content;
 
                 // Sort purely random or just as-is to simulate "discovery"
-                // For "Daily Discover", displaying somewhat uniquely is good. 
-                // Let's randomize it slightly so it looks different from Flash Sale
                 products.sort(() => Math.random() - 0.5);
 
                 if (products.length === 0) {
@@ -131,24 +221,20 @@
                 }
 
                 grid.innerHTML = products.map(product => {
-                    // Start: Image Logic
                     const imageUrl = (product.images && product.images.length > 0)
                         ? product.images[0]
                         : 'https://via.placeholder.com/400x400?text=No+Image';
 
-                    // Start: Price Logic
                     let priceVal = 0;
                     if (product.variants && product.variants.length > 0) priceVal = product.variants[0].price;
-                    else if (product.price) priceVal = product.price; // Fallback
+                    else if (product.price) priceVal = product.price;
 
                     const priceDisplay = new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(priceVal);
 
-                    // Start: Daily Discover Badges
                     const badges = ['HOT', 'NEW', 'BEST', 'SALE'];
                     const randomBadge = badges[Math.floor(Math.random() * badges.length)];
                     const badgeColor = randomBadge === 'HOT' ? 'bg-red-500' : (randomBadge === 'NEW' ? 'bg-green-500' : 'bg-orange-500');
 
-                    // Stats - use real data from API
                     const soldCount = product.sold != null ? product.sold : 0;
                     const rating = product.rating != null ? product.rating.toFixed(1) : '-';
 
@@ -157,7 +243,6 @@
                          class="bg-white rounded-lg shadow hover:shadow-lg transition-all overflow-hidden group cursor-pointer border border-transparent hover:border-orange-500">
                         <div class="relative">
                             <img src="${imageUrl}" alt="${product.name}" class="w-full h-48 object-cover">
-                            <!-- Daily Badge -->
                             <div class="absolute top-2 left-2 ${badgeColor} text-white px-2 py-1 rounded text-xs font-bold shadow-sm">
                                 ${randomBadge}
                             </div>
