--- a/src/Frontend/order-success-backend.html
+++ b/src/Frontend/order-success-backend.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <header class="bg-[#AD3029] text-white shadow-sm sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex items-center justify-between py-4 gap-8">
+            <div class="flex items-center justify-between h-20 gap-8">
                 <div class="flex items-center gap-4 min-w-fit">
                     <a href="index.html" class="flex items-center gap-2 text-white hover:opacity-90">
                         <i class="fas fa-shopping-bag text-3xl bounce-goshop"></i>
